# gym-tracker-mcp

./: .gitignore  CLAUDE.md  README.md  database.py  main.py  nginx.conf  pyproject.toml  seed.py  start.sh
backend/: .env.example  alembic.ini  api.py  auth.py  database.py  deps.py  main.py  mcp_instance.py  pyproject.toml  start.sh  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 4fe8bdb2fbb1_add_tracking_type_and_duration_fields.py  df3c1e87cc31_initial_schema.py
backend/routers/: __init__.py  exercises.py  muscle_groups.py  sets.py  workout_exercises.py  workouts.py
backend/services/: __init__.py  exercise.py  muscle_group.py  workout.py  workout_exercise_detail.py
backend/tools/: __init__.py  exercises.py  muscle_groups.py  sets.py  workout_exercises.py  workouts.py
docs/dev-instructions/: workout-log.md
docs/plans/: 2026-03-07-frontend-react-orval-design.md  2026-03-07-frontend-react-orval-plan.md  2026-03-08-auth-design.md  2026-03-08-auth-plan.md  2026-03-08-exercise-library-crud-design.md  2026-03-08-exercise-library-crud-plan.md  2026-03-08-workout-log-design.md
docs/superpowers/plans/: 2026-03-10-muscle-group-volume.md  2026-03-15-exercise-tracking-types.md
docs/superpowers/specs/: 2026-03-10-muscle-group-volume-design.md  2026-03-12-exercise-tracking-types-design.md
frontend/: .env.example  .gitignore  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: restart-backend.sh
services/: workout.py  workout_exercise.py
(+81 files in other folders)
